public template implementation
